# velox

CMake/resolve_dependency_modules/: cpr.cmake
velox/connectors/: Connector.h
velox/connectors/hive/: HiveConnectorUtil.cpp  HiveConnectorUtil.h  SplitReader.cpp
velox/connectors/hive/iceberg/: PositionalDeleteFileReader.cpp
velox/connectors/hive/tests/: HiveConnectorUtilTest.cpp  HiveDataSinkTest.cpp
velox/core/tests/: QueryConfigTest.cpp
velox/dwio/common/: Options.h
velox/dwio/parquet/: RegisterParquetReader.cpp  RegisterParquetReader.h
velox/dwio/parquet/crypto/: AesEncryption.cpp  AesEncryption.h  CLACKey.cpp  CLACKey.h  CMakeLists.txt  CryptoFactory.h  Exception.h  FileDecryptor.cpp  FileDecryptor.h  InMemoryKMSClient.cpp  InMemoryKMSClient.h  KeyMetadataAssembler.h  KeyRetriever.h  PapyrusHelper.cpp  PapyrusHelper.h  RangerKMSClient.cpp  RangerKMSClient.h
velox/dwio/parquet/reader/: CMakeLists.txt  Metadata.cpp  Metadata.h  PageReader.cpp  PageReader.h  ParquetReader.cpp
velox/dwio/parquet/tests/reader/: ParquetReaderTest.cpp
velox/exec/tests/: TableScanTest.cpp  TableWriteTest.cpp  TaskTest.cpp
velox/exec/tests/utils/: LocalRunnerTestBase.cpp
velox/tool/trace/: OperatorReplayerBase.cpp
